--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan 17 16:11:03 2000  Tim Janik  <timj@gtk.org>
+
+	* davsyndrum.[hc]: added edge-sensitive trigger input channel.
+
 Mon Jan 17 11:15:37 2000  Tim Janik  <timj@gtk.org>
 
 	* davsyndrum.[hc]: added DavSynDrum module, a synthesized drum
