auto-sweep unsused samples.
Mon Jan 17 15:19:18 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c (project_cross_changes): auto-sweep unsused
        samples.

        * beast-gtk/bstapp.c (bst_app_add_super): popup sample shell.
        (bst_app_new): auto-update GUI when supers got added to/removed
        from the project.
        (bst_app_reload_supers): don't unecessarily destroy widgets,
        remeber old page.

        * beast-gtk/bstsampleshell.[hc]: new sample shell widget (features
        nothing more than a paramview yet).

svn path=/trunk/; revision=169

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-Sun Jan 16 07:33:35 2000  Tim Janik  <timj@gtk.org>
+Mon Jan 17 15:19:18 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.c (project_cross_changes): auto-sweep unsused
+	samples.
 
 	* beast-gtk/bstapp.c (bst_app_add_super): popup sample shell.
 	(bst_app_new): auto-update GUI when supers got added to/removed
