--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,10 @@
 
 * New synthesis modules:
-  BseMixer - mix 4->1 channels with adjustable volumes
-  DavOrgan - a modifiable Additive Organ Synthesizer
+  BseMixer   - mix 4->1 channels with adjustable volumes
+  DavOrgan   - a modifiable Additive Organ Synthesizer
+  DavSynDrum - a synthesized drum generator
+* Pattern editor keytable display
+* Simple sample views for samples used in a project
 * More test files in the test/ subdirectory ;)
 
 Overview of Changes in BEAST/BSE 0.3.1:
