--- a/README
+++ b/README
@@ -25,7 +25,7 @@ The official ftp site is:
 The official web site is:
   http://beast.gtk.org/
 
-And finally there's a mailing list (merely an alias) as well:
+And finally there's a mailing list (pretty low volume) as well:
   beast@beast.gtk.org
 send an email to timj@beast.gtk.org to get subscribed.
 
