--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 
+* Enabled procedure support for the pattern editor to supply
+  spreadsheet like editing facilities
 * Synthesis instruments, i.e. use of synthesis networks as song
   instruments
 * New synthesis modules:
