--- a/NEWS
+++ b/NEWS
@@ -4,9 +4,10 @@
 * Synthesis instruments, i.e. use of synthesis networks as song
   instruments
 * New synthesis modules:
-  BseMixer   - mix 4->1 channels with adjustable volumes
-  DavOrgan   - a modifiable Additive Organ Synthesizer
-  DavSynDrum - a synthesized drum generator
+  BseMixer       - mix 4->1 channels with adjustable volumes
+  DavOrgan       - a modifiable Additive Organ Synthesizer
+  DavSynDrum     - a synthesized drum generator
+  DavCanyonDelay - adds deep, long delay echo effects
 * Pattern editor keytable display
 * Simple sample views for samples used in a project
 * More test files in the test/ subdirectory ;)
