--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 
+* Synthesis tools palette for the synthesis network router
 * Enabled procedure support for the pattern editor to supply
   spreadsheet like editing facilities
 * Synthesis instruments, i.e. use of synthesis networks as song
